	PR middle-end/24053 	* stor-layout.c (set_sizetype): Set TYPE_MAIN_VARIANT of bitsizetype.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104800 138bc75d-0d04-0410-961f-82ee72b054a4